<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".ActivityDetailsMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/image_backdrop_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_backdrop_height"
                android:contentDescription="@string/imagen_de_fondo"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_Poster_movie"
                android:layout_width="@dimen/image_Poster_width"
                android:layout_height="@dimen/image_Poster_height"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/image_Poster_marginTop"
                android:contentDescription="@string/afiche_de_la_pelicula"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:lines="2"
                app:layout_constraintBottom_toBottomOf="@+id/image_Poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_Poster" />

            <ProgressBar
                android:id="@+id/progressBar_user_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/circle_progress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_Poster" />

            <TextView
                android:id="@+id/textView_user_score_value"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:textColor="#F8FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar_user_score"
                app:layout_constraintEnd_toEndOf="@+id/progressBar_user_score"
                app:layout_constraintStart_toStartOf="@+id/progressBar_user_score"
                app:layout_constraintTop_toTopOf="@+id/progressBar_user_score" />

            <TextView
                android:id="@+id/textView_user_score"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:text="@string/puntuacion_de_usuario"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView_user_score_value"
                app:layout_constraintTop_toBottomOf="@+id/image_Poster" />

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:background="#888888"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/button_play_trailer"
                app:layout_constraintTop_toBottomOf="@+id/image_Poster" />

            <Button
                android:id="@+id/button_play_trailer"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_play_arrow_black_24dp"
                android:text="@string/play_trailer"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_Poster" />

            <ProgressBar
                android:id="@+id/progressBarData"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_backdrop" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"

                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_title_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1F1F1"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/information"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/original_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/state"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/release_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/original_language"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_original_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/runtime"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/budget"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/revenue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_revenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/genres"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>